[package]
name = "gdbmi"
version = "0.0.2"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
license = "MIT"
description = "(WIP) Interact with a GDB session through the GDB machine interface"
repository = "https://github.com/danielzfranklin/gdbmi"
keywords = ["gdb", "gdbmi", "debugger", "debug", "debugging"]
categories = ["development-tools"]

[features]
# Build tests that require rr
test_rr = []
# Build tests that require rd
test_rd = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7.1.3"
regex = "1.10.3"
lazy_static = "1.4.0"
thiserror = "1.0.56"
displaydoc = "0.2.4"
bytes = "1.5.0"
tracing = "0.1.40"
rand = "0.8.5"
tokio = { version = "1.36.0", features = [
    "macros",
    "process",
    "sync",
    "io-util",
    "rt",
    "time"
] }
camino = "1.1.6"
derivative = "2.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
eyre = "0.6.12"
tokio-test = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-eyre = "0.6.2"
insta = "1.34.0"
duct = "0.13.7"
